Updates to content, addition of Prepros
Fixed typos that prevented normal function of mobile "Menu" button;
Updates to content for as-am, geo;

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 </footer>
 
 <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
-<script src="js/index.js"></script>
+<script src="/js/index.js"></script>
         
     </body>
     
