--- a/notes/as-am.html
+++ b/notes/as-am.html
@@ -86,10 +86,10 @@
                     <div class="item">
                         <h4 class="item-title"><span class="asian">映画：ゴジラ</span></h4>
                         <p>Fishing boat: Daigo Fukuryu</p>
-                        <p>Connections (explicit &amp; implicit) to nuclear war?</p>
-                        <p>Attitudes toward war and science?</p>
-                        <p><a href="//nuclearsecrecy.com/nuketest">Theoretical Nuclear Tests</a></p>
-                        <p>Other thoughts, impressions, questions?</p>
+                        <p>What connections does this film make with nuclear warfare? Consider both explicit references and any implied ones. Furthermore, what seems to be the film's attitudes towar war and science? Also write about other thoughts, impressions, or questions that you have about the film.</p>
+                        <p>This film has many connections to nuclear warfare.a woman How did this creature come to be? They keep talking about the nuclear testing. There is a suggestive theme throughout the movie saying that nuclear warfare is at fault (i.e. the US) for Japan's problems. It has caused much suffering, pain, and loss. The film supports the idea of science but cautions the use of science for destruction. The end of the movie is sad. Today's movies have a "glory" ending. Where the hero fist-bumps his friends and he gets the girl. But this movie ends on a sad note. The movie message is pleading to stop nuclear testing for glory. It only brings pain.</p>
+                        <p>There are many scenes in the movie where there is no hero. During Godzilla's attack on Tokyo, a woman says to her children that they will be seeing their father soon.</p>
+                        <p>Grave of the Fireflies (animated movie)</p>
                     </div>
                 </div>
             </div>
@@ -412,7 +412,7 @@
 
 <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
 
-<script src="js/index.js"></script>
+<script src="/js/index.js"></script>
 
 </body>
 
