--- a/resume.html
+++ b/resume.html
@@ -199,6 +199,6 @@
         </footer>
 
         <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
-        <script src="js/index.js"></script>
+        <script src="/js/index.js"></script>
 	</body>
 </html>
