--- a/notes/geog.html
+++ b/notes/geog.html
@@ -3,7 +3,7 @@
      <head>
         <title> Geography 1 - East Los Angeles College</title>
         <link type="text/css" rel="stylesheet" href="/css/stylesheet.css">
-        <link type="text/css" rel="stylesheet" href="/css/normalize.css"
+        <link type="text/css" rel="stylesheet" href="/css/normalize.css">
     </head>
     <body>
         <div id="header">
