--- a/notes/as-am.html
+++ b/notes/as-am.html
@@ -245,7 +245,7 @@
                     <div class="item" style="text-align:center; min-width=100%;">
                         <h4 class="item-title">May 4, 1919 (<span class="asian">&#20116;&#22235;&#36939;&#21205;</span> / W&#468;s&igrave;Y&ugrave;nD&ograve;ng)</h4>
                         <p>This presentation is resizable.</p>
-                        <p><iframe style="resize:both;overflow:auto;" src='https://onedrive.live.com/embed?cid=76075FB6434D4B44&resid=76075FB6434D4B44%2116974&authkey=APfvvQZBrlc9dzg&em=2&wdAr=1.7777777777777776' width="100%" frameborder='1' >This is an embedded <a target='_blank' href='http://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='http://office.com/webapps'>Office Online</a>.</iframe></p>
+                        <p style="margin: 0px -100px; display: block;"><iframe src="https://onedrive.live.com/embed?cid=76075FB6434D4B44&amp;resid=76075FB6434D4B44%2116974&amp;authkey=APfvvQZBrlc9dzg&amp;em=2&amp;wdAr=1.7777777777777776" frameborder="1" style="min-height: 210px; min-width: 300px; resize: both;">This is an embedded &lt;a target='_blank' href='http://office.com'&gt;Microsoft Office&lt;/a&gt; presentation, powered by &lt;a target='_blank' href='http://office.com/webapps'&gt;Office Online&lt;/a&gt;.</iframe></p>
                     </div>
                     
                     <div class="item">
