--- a/notes/bible-studies.html
+++ b/notes/bible-studies.html
@@ -331,13 +331,18 @@
                 </div>
                 
                 <div class="item">
-                    <h4 class="item-title">John 5:16-20, 15:18-20</h4>
+                    <h4 class="item-title">John 5:18-20, 15:18-20</h4>
                     <p><a href="https://www.biblegateway.com/passage/?search=John+5%3A16-20%2C+15%3A18-20&version=ESV" target="_blank">See verse</a></p>
                     <p>People are going to hate you like they did Jesus.</p>
                     <p>Haters gonna hate.</p>
                     <p>They persecuted Jesus first. That is why people hate you.</p>
                 </div>
                 
+                <div class="item">
+                    <h4 class="item-title">Romans 5:3-5</h4>
+                    <p><a href="https://www.biblegateway.com/passage/?search=Romans+5%3A3-5&version=ESV" target="_blank">See verse</a></p>
+                    <p>Persectution will happen. But suffering produces endurance. Endurance produces character. Character produces hope. Hope does not put us to shame because God's love has been poured into our hearts.</p>
+                </div>
             </div>
         </div>
     </article>
