Updates to content
as-am.html : updated description;
geo.html :notebook: new notes;
artist-theme.html :video_camera: updated video background;

--- a/notes/as-am.html
+++ b/notes/as-am.html
@@ -7,7 +7,7 @@
     <title>Asian American Studies 3 - ELAC | Maralkan</title>
     <meta name="author" content="Marvin Alcantara">
     <meta name="keywords" content="asian american studies, ELAC, East Los Angeles College, notes, asian-american studies, asian studies">
-    <meta name="description" content="This page serves to host my notes taken from the Asian American Studies course on Peoples and Cultures of Asia. This course is offered at East Los Angeles College by Professor Song, D. K.">
+    <meta name="description" content="This page serves to host my notes taken from the Asian American Studies course on Peoples and Cultures of Asia. This course is offered at East Los Angeles College by Professor Song, David K.">
     
     <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Righteous|Marck+Script' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -33,7 +33,7 @@
             <ul>
                 <li class="mobile-button"><a href="#">Menu</a></li>
                 <li><a href="/">About Me</a></li>
-                <li><a href="#">Notes</a>
+                <li><a href="">Notes</a>
                     <ul>
                         <li><a href="#top">As - Am Studies</a></li>
                         <li><a href="/notes/bible-studies">Bible Studies</a></li>
@@ -42,7 +42,7 @@
                         <li><a href="/notes/meteor">Meteorology</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Works</a>
+                <li><a href="">Works</a>
                     <ul>
                         <li><a href="/works/artist-theme">Artist's Theme</a></li>
                         <li><a href="/works/fixnav">Fixed Nav Bar</a></li>
