--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header class="header">
             <div class="container">
                 <h1 class="site-title">Marvin Alc&aacute;ntara</h1>
-                <span class="site-tagline">B.A. Cognitive Science, 2017 | University of California at Berkeley</span>
+                <span class="site-tagline">B.S. Linguistics, 2017 | University of California at Berkeley</span>
             </div>
         </header>
         <nav class="main-nav">
@@ -61,7 +61,7 @@
                 <div class="columns thirds">
                     <div class="item">
                         <h4 class="item-title">School</h4>
-                        <p>I am a student at UC Berkeley. I am majoring in Cognitive Science.</p>
+                        <p>I am a student at UC Berkeley. I am majoring in Linguistics.</p>
                         <p>I am currently taking time off to de-stress and to rekindle my relationship with my family. So I'm attending East Los Angeles College while I am at home.</p>
                         <p>Current coursework:</p>
                         <ul>
