--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
     <title>Thanks!</title>
     <meta charset="utf-8">
     <meta name="author" content="Marvin Alcantara">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nunito:400,300,700|Righteous|Marck+Script" type="text/css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700" type="text/css">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css">
@@ -55,5 +55,10 @@
         </div>
       </article>
     </section>
+    <footer class="footer">
+      <div class="container"><p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated April 17, 2015.</p></div>
+    </footer>
+    <script src="http://codepen.io/assets/libs/fullpage/jquery.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
