Updated Jobs and Major

--- a/resume.html
+++ b/resume.html
@@ -62,8 +62,8 @@
                         
                         <div class="item" style="width:100%;">
                             <h4 class="item-title">Education</h4>
-                            <p><strong>B.A. Cognitive Science, UC Berkeley</strong></p>
-                            <p><em>Emphasis in Human-Computer Interface and East-Asian Linguistics</em></p>
+                            <p><strong>B.S. Linguistics, UC Berkeley</strong></p>
+                            <p><em>Emphasis in Natural Language Processing and East-Asian Linguistics</em></p>
                         </div>
                     </div>
                 </div>
@@ -73,6 +73,17 @@
                 <div class="container">
                     <h2>Experience</h2>
                     <div class="columns thirds">
+                        <div class="item">
+                            <h4 class="item-title">Web Deacon</h4>
+                            <p><strong>City of Angels International Christian Church</strong></p>
+                            <p><em>Los Angeles, CA | March 2015 - current</em></p>
+                            <ul>
+                                <li>Design and maintain the Metro Manila International Christian Church website <a href="https://mmicc.net/">here</a></li>
+                                <li>Maintain the Central Region website with current events and images <a href="http://central.caicc.net/">here</a></li>
+                                <li>Responsible for communication between departments for organizational purposes</li>
+                            </ul>
+                        </div>
+                        
                         <div class="item">
                             <h4 class="item-title">Web Designer, Administrative Assistant</h4>
                             <p><strong>Austral Housing Inspections</strong></p>
