--- a/notes/bible-studies.html
+++ b/notes/bible-studies.html
@@ -36,7 +36,6 @@
                             <li><a href="#top">Bible Studies</a></li>
                             <li><a href="/notes/chn">Chinese</a></li>
                             <li><a href="/notes/geo">Geography</a></li>
-                            <li><a href="/notes/meteor">Meteorology</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Works</a>
@@ -403,6 +402,7 @@
     <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
 
     <script src="/js/index.js"></script>
+    <script src="/js/functions.js"></script>
 
     </body>
 </html>
