--- a/notes/chn.html
+++ b/notes/chn.html
@@ -44,7 +44,6 @@
                         <li><a href="/notes/bible-studies">Bible Studies</a></li>
                         <li><a href="#top">Chinese</a></li>
                         <li><a href="/notes/geo">Geography</a></li>
-                        <li><a href="/notes/meteor">Meteorology</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Works</a>
@@ -68,7 +67,7 @@
                 <div class="columns thirds">
                     
                     <div class="item">
-                        <h4 class="item-title">Practice Writing / <span class="asian">练习写汉字/練習寫漢字</span></h4>
+                        <h4 class="item-title">Practice Writing <br/><span class="asian">练习写汉字<br/>練習寫漢字</span></h4>
                         <p>This gadget shows Chinese character stroke order to improve everyone's writing skills and speed. It also enables you to focus on the use of radicals and to learn their importance in Chinese linguistics.</p>
                         <p>
                             <iframe name="estroke" width="350" height="356" src="https://www.eon.com.hk/common/fcg/estroke.fcg?task=getPage&amp;&amp;page=demo/template2.html&amp;&amp;bgcolor=ffffff&amp;&amp;bias=Simplified&amp;&amp;plan=Star&amp;&amp;transientColor=ff0000&amp;&amp;strokeColor=000000&amp;&amp;radicalColor=0000ff&amp;&amp;planColor=00ff00&amp;&amp;appsize=200&amp;noinput=false" frameborder="0" scrolling="no" style="font-family:'KaiTi';"></iframe>
@@ -101,8 +100,8 @@
 </footer>
 
     <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
-
     <script src="/js/index.js"></script>
+    <script src="/js/functions.js"></script>
 
 </body>
 
