--- a/notes/geo.html
+++ b/notes/geo.html
@@ -37,7 +37,6 @@
                     <li><a href="/notes/bible-studies">Bible Studies</a></li>
                     <li><a href="/notes/chn">Chinese</a></li>
                     <li><a href="#top">Geography</a></li>
-                    <li><a href="/notes/meteor">Meteorology</a></li>
                 </ul>
             </li>
             <li><a href="#">Works</a>
@@ -636,6 +635,7 @@
 
 <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
 <script src="/js/index.js"></script>
+<script src="/js/functions.js"></script>
 
 </body>
 
