--- a/thanks.html
+++ b/thanks.html
@@ -25,7 +25,6 @@
               <li><a href="/notes/bible-studies">Bible Studies</a></li>
               <li><a href="/notes/chn">Chinese</a></li>
               <li><a href="/notes/geo">Geography</a></li>
-              <li><a href="/notes/meteor">Meteorology</a></li>
             </ul>
           </li>
           <li><a href="/works/">Works</a>
@@ -56,7 +55,7 @@
       <div class="container"><p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated May 1, 2015.</p></div>
     </footer>
     <script src="http://codepen.io/assets/libs/fullpage/jquery.js"></script>
-    <script src="js/index.js"></script>
-    <script>$(window).scroll(function(){ var wScroll = $(this).scrollTop(); $('.logo').css({'transform' : 'translate(0px, '+ wScroll /2 +'%)'});});</script>
+    <script src="/js/index.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
