--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="../contact">Contact</a></li>
                 </ul>
             </nav>
-            <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=PN_CP4SuoTU',containment:'body',autoPlay:true, mute:true, startAt:07, opacity:1, quality:'hd1080'}"></a>
+            <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=aFK6YfnZlyE',containment:'body',autoPlay:true, opacity:1, quality:'hd1080'}"></a>
             <!-- <div class="pattern"></div> -->
             <div class="big-background-container">
                 <h1 class="big-background-title">Marvin Alcantara</h1>
@@ -62,9 +62,9 @@
                     <p><strong>I am a student at UC Berkeley.</strong> I am majoring in Linguistics. I am currently taking time off to de-stress. So I'm attending East Los Angeles College while I am at home.</p>
                     <p>Current coursework:</p>
                     <ul>
-                          <li>Asian American Studies 3: Peoples and Cultures of Asia</li>
-                          <li>Chinese 2: Intermediate Chinese</li>
-                          <li>Geography 1: Physical Geography</li>
+                          <li>- Asian American Studies 3: Peoples and Cultures of Asia</li>
+                          <li>- Chinese 2: Intermediate Chinese</li>
+                          <li>- Geography 1: Physical Geography</li>
                     </ul>
                     <a href="../notes" target="_blank" class="about-section-btn">Notes</a>
                 </div>
@@ -83,7 +83,7 @@
                     <p>I am a Christian / Disciple. But I do not follow blindly what scriptures say. I scrutinize them and pay close attention to detail.</p>
                     <p>I decided to become a Christian after careful consideration of evidences for Christianity and decided that since there is no evidence that refutes Christianity or the existence of God, I only have to believe one or the other. I chose to believe what the biblical scriptures say because I believe that they are an accurate picture of how I need to live my life and how I must relate to God at a very personal level.</p>
                     <p>I believe that, in order to become a Christian, one must first be a disciple of Christ, repenting of sins and dedicating to live God's way (Acts: all conversions). Then, after becoming a disciple, this person must then be baptized in water and spirit (John 3:1-7, Acts 2:38, Romans 6:1-4), in the name of the Father, of the Son, and of the Holy Spirit. Finally, this new Christian must then go and make <em>disciples</em> of all other nations. (Matthew 28:18-20)</p>
-                    <a href="../notes/bible-studies" target="_blank" class="about-section-btn">Bible Studies</a>
+                    <a href="../notes/bible-studies" target="_blank" class="about-section-btn">Check out the Bible Studies</a>
                 </div>
             </section>
             <section class="small-background-section">
@@ -102,17 +102,16 @@
                           <li>Berean Challenge: Read one chapter of the Bible every day. Current book: Hebrews. See <a href="https://www.biblegateway.com/passage/?search=Acts+17%3A11-12&version=NIV" target="_blank">this</a> passage.</li>
                           <li>Website Prototyping: I like to test out website designs and gadgets and implement them into my own webpages. So this website may have some elements that do not function at times.</li>
                           <li>Fellowship: I love to hang out with friends from my church but I'm not exclusive and I love making new friends.</li>
-                          <li>Learn Chinese:<br/><span class="asian">我喜欢学中文。</span><br />I'm not fluent yet but I'd like to be.</li>
-                          <li>Learn Japanese:<br/><span class="asian">僕は日本語を勉強するが好きです。</span><br/>I hope to be part of the mission team that is to be sent out to Tokyo, Japan in a couple of years.</li>
+                          <li>Learn Chinese: <span class="asian">我喜欢学中文。</span> I'm not fluent yet but I'd like to be.</li>
+                          <li>Learn Japanese: <span class="asian">僕は日本語を勉強するが好きです。</span> I hope to be part of the mission team that is to be sent out to Tokyo, Japan in a couple of years.</li>
                     </ul>
-                    <a href="../notes/bible-studies" target="_blank" class="about-section-btn">Bible Studies</a>
+                    <a href="http://central.caicc.net/" target="_blank" class="about-section-btn">Check out the Church</a>
                 </div>
             </section>
             <section class="small-background-section">
                 <div class='pattern'></div>
                 <div class="small-background-container">
-                  <p class="small-background-title"><span>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated May 26, 2015.</span></p>
-                    <p></p>
+                  <p class="small-background-title"><span>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated June 11, 2015.</span></p>
                     <!-- <a href="/works/video-theme" class="big-background-btn">Check it here</a> -->
                 </div>
             </section>
