Tweaks to Design
Removed extra space

--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
                           <li>Berean Challenge: Read one chapter of the Bible every day. Current book: Hebrews. See <a href="https://www.biblegateway.com/passage/?search=Acts+17%3A11-12&version=NIV" target="_blank">this</a> passage.</li>
                           <li>Website Prototyping: I like to test out website designs and gadgets and implement them into my own webpages. So this website may have some elements that do not function at times.</li>
                           <li>Fellowship: I love to hang out with friends from my church but I'm not exclusive and I love making new friends.</li>
-                          <li>Learn Chinese: <span class="asian">我喜欢学中文。</span> I'm not fluent yet but I'd like to be.</li>
-                          <li>Learn Japanese: <span class="asian">僕は日本語を勉強するが好きです。</span> I hope to be part of the mission team that is to be sent out to Tokyo, Japan in a couple of years.</li>
+                          <li>Learn Chinese: <span class="asian">我喜欢学中文。</span>I'm not fluent yet but I'd like to be.</li>
+                          <li>Learn Japanese: <span class="asian">僕は日本語を勉強するが好きです。</span>I hope to be part of the mission team that is to be sent out to Tokyo, Japan in a couple of years.</li>
                     </ul>
                     <a href="http://central.caicc.net/" target="_blank" class="about-section-btn">Check out the Church</a>
                 </div>
             </section>
-            <section class="small-background-section">
+            <section class="small-background-section" style="padding: 40px 0;">
                 <div class='pattern'></div>
                 <div class="small-background-container">
-                  <p class="small-background-title"><span>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated June 11, 2015.</span></p>
+                  <p class="small-background-title"><span style="font-size: 12px;">&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated June 11, 2015.</span></p>
                     <!-- <a href="/works/video-theme" class="big-background-btn">Check it here</a> -->
                 </div>
             </section>
