--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <p><strong>I am a student at UC Berkeley.</strong> I am majoring in Linguistics. I am currently taking time off to de-stress. So I'm attending East Los Angeles College while I am at home.</p>
                     <p>Current coursework:</p>
                     <ul>
-                          <li>- Asian American Studies 3: Peoples and Cultures of Asia</li>
-                          <li>- Chinese 2: Intermediate Chinese</li>
-                          <li>- Geography 1: Physical Geography</li>
+                          <li>- <strong>Asian American Studies 3</strong>: Peoples and Cultures of Asia</li>
+                          <li>- <strong>Chinese 2</strong>: Intermediate Chinese</li>
+                          <li>- <strong>Geography 1</strong>: Physical Geography</li>
                     </ul>
                     <a href="../notes" target="_blank" class="about-section-btn">Notes</a>
                 </div>
@@ -99,11 +99,11 @@
                     <!-- <h2 class="about-section-title">School</h2> -->
                     <p>I have a lot of time on my hands now that I am at ELAC. Here's what I like to do:</p>
                     <ul>
-                          <li>Berean Challenge: Read one chapter of the Bible every day. Current book: Hebrews. See <a href="https://www.biblegateway.com/passage/?search=Acts+17%3A11-12&version=NIV" target="_blank">this</a> passage.</li>
-                          <li>Website Prototyping: I like to test out website designs and gadgets and implement them into my own webpages. So this website may have some elements that do not function at times.</li>
-                          <li>Fellowship: I love to hang out with friends from my church but I'm not exclusive and I love making new friends.</li>
-                          <li>Learn Chinese: <span class="asian">我喜欢学中文。</span>I'm not fluent yet but I'd like to be.</li>
-                          <li>Learn Japanese: <span class="asian">僕は日本語を勉強するが好きです。</span>I hope to be part of the mission team that is to be sent out to Tokyo, Japan in a couple of years.</li>
+                          <li><strong>Berean Challenge</strong>: Read one chapter of the Bible every day. Current book: Hebrews. See <a href="https://www.biblegateway.com/passage/?search=Acts+17%3A11-12&version=NIV" target="_blank">this</a> passage.</li>
+                          <li><strong>Website Prototyping</strong>: I like to test out website designs and gadgets and implement them into my own webpages. So this website may have some elements that do not function at times.</li>
+                          <li><strong>Fellowship</strong>: I love to hang out with friends from my church but I'm not exclusive and I love making new friends.</li>
+                          <li><strong>Learn Chinese</strong>: <span class="asian">我喜欢学中文。</span>I'm not fluent yet but I'd like to be.</li>
+                          <li><strong>Learn Japanese</strong>: <span class="asian">僕は日本語を勉強するが好きです。</span>I hope to be part of the mission team that is to be sent out to Tokyo, Japan in a couple of years.</li>
                     </ul>
                     <a href="http://central.caicc.net/" target="_blank" class="about-section-btn">Check out the Church</a>
                 </div>
