--- a/index2.html
+++ b/index2.html
@@ -13,29 +13,29 @@
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
-          <li><a href="#">Name</a></li>
-          <li><a href="#">Browse</a></li>
+          <li><a href="../index2">Marvin</a></li>
+          <li><a href="../resume">Resume</a></li>
         </ul>
         <ul class="pull-right">
-          <li><a href="#">Sign Up</a></li>
-          <li><a href="#">Log In</a></li>
-          <li><a href="#">Help</a></li>
+          <li><a href="../works">Works</a></li>
+          <li><a href="../notes">Notes</a></li>
+          <li><a href="../contact">Contact</a></li>
         </ul>
       </div>
     </div>
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Find a place to stay.</h1>
-        <p>Rent from people in over 34,000 cities and 192 countries.</p>
-        <a href="#">Learn More</a>
+        <h1>Marvin Alcantara.</h1>
+        <p>I've redesigned my website.</p>
+        <a href="../">See it here</a>
       </div>
     </div>
 
     <div class="neighborhood-guides">
       <div class="container">
-        <h2>Neighborhood Guides</h2>
-        <p>Not sure where to stay? We've created neighborhood guides for cities all around the world</p>
+        <h2>About me</h2>
+        <p><strong>Hi! I've redesigned my website.</strong> Feel free to give me feedback <a href="../contact">here</a> if you wish.</p>
         <div class="row">
 
           <div class="col-md-4">
