--- a/index2.html
+++ b/index2.html
@@ -2,6 +2,9 @@
 <html>
 
   <head>
+    <meta charset="utf-8">
+    <title>Marvin Alcantara</title>
+    <meta name="author" content="Marvin Alcantara">
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
 
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
@@ -12,14 +15,14 @@
   <body>
     <div class="nav">
       <div class="container">
-        <ul class="pull-left">
-          <li><a href="../index2">Marvin</a></li>
-          <li><a href="../resume">Resume</a></li>
+        <ul class="pull-lef nav-pills">
+          <li role="presentation" class="active"><a href="#">Marvin</a></li>
+          <li role="presentation"><a href="../resume">Resume</a></li>
         </ul>
-        <ul class="pull-right">
-          <li><a href="../works">Works</a></li>
-          <li><a href="../notes">Notes</a></li>
-          <li><a href="../contact">Contact</a></li>
+        <ul class="pull-right nav-pills">
+          <li role="presentation"><a href="../works">Works</a></li>
+          <li role="presentation"><a href="../notes">Notes</a></li>
+          <li role="presentation"><a href="../contact">Contact</a></li>
         </ul>
       </div>
     </div>
