--- a/index2.html
+++ b/index2.html
@@ -13,17 +13,19 @@
   </head>
 
   <body>
-    <div class="nav">
-      <div class="container">
-        <ul class="pull-lef nav-pills">
-          <li role="presentation" class="active"><a href="#">Marvin</a></li>
-          <li role="presentation"><a href="../resume">Resume</a></li>
-        </ul>
-        <ul class="pull-right nav-pills">
-          <li role="presentation"><a href="../works">Works</a></li>
-          <li role="presentation"><a href="../notes">Notes</a></li>
-          <li role="presentation"><a href="../contact">Contact</a></li>
-        </ul>
+    <div class="row">
+      <div class="nav">
+        <div class="container">
+          <ul class="pull-lef nav-pills">
+            <li role="presentation" class="active"><a href="#">Marvin</a></li>
+            <li role="presentation"><a href="../resume">Resume</a></li>
+          </ul>
+          <ul class="pull-right nav-pills">
+            <li role="presentation"><a href="../works">Works</a></li>
+            <li role="presentation"><a href="../notes">Notes</a></li>
+            <li role="presentation"><a href="../contact">Contact</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
