Link now opens in new window

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <section class="about-section">
                 <div class="about-section-container">
                     <h2 class="about-section-title">About Me</h2>
-                    <p><strong>Hi! I've redesigned my website.</strong> Feel free to give me feedback <a href="../contact">here</a> if you wish.</p>
+                    <p><strong>Hi! I've redesigned my website.</strong> Feel free to give me feedback <a href="../contact" target="_blank">here</a> if you wish.</p>
                     <a href="../index2" target="_blank" class="about-section-btn">Check out my previous design</a>
                 </div>
             </section>
