--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900' rel='stylesheet' type='text/css'>
 
-        <link rel="stylesheet" href="../css/normalize.css" media="all">
-        <link rel="stylesheet" href="../css/a_style.css" media="all">
+        <link rel="stylesheet" href="../css/normalize.css" media="all" type="text/css">
+        <link rel="stylesheet" href="../css/a_style.css" media="all" type="text/css">
 
         <script src="../js/jquery-1.11.1.min.js"></script>
         <script src="../js/device.min.js"></script> <!--OPTIONAL JQUERY PLUGIN-->
@@ -62,9 +62,8 @@
                     <p><strong>I am a student at UC Berkeley.</strong> I am majoring in Linguistics. I am currently taking time off to de-stress. So I'm attending East Los Angeles College while I am at home.</p>
                     <p>Current coursework:</p>
                     <ul>
-                          <li>- <strong>Asian American Studies 3</strong>: Peoples and Cultures of Asia</li>
-                          <li>- <strong>Chinese 2</strong>: Intermediate Chinese</li>
-                          <li>- <strong>Geography 1</strong>: Physical Geography</li>
+                          <li>- <strong>American Sign Language 1</strong>: Elementary American Sign Language</li>
+                          <li>- <strong>French 1</strong>: Elementary French</li>
                     </ul>
                     <a href="../notes" target="_blank" class="about-section-btn">Notes</a>
                 </div>
@@ -80,9 +79,9 @@
             <section class="about-section">
                 <div class="about-section-container">
                     <!-- <h2 class="about-section-title">School</h2> -->
-                    <p>I am a Christian / Disciple. But I do not follow blindly what scriptures say. I scrutinize them and pay close attention to detail.</p>
+                    <p><strong>I am a Christian / Disciple.</strong> But I do not follow blindly what scriptures say. I scrutinize them and pay close attention to detail.</p>
                     <p>I decided to become a Christian after careful consideration of evidences for Christianity and decided that since there is no evidence that refutes Christianity or the existence of God, I only have to believe one or the other. I chose to believe what the biblical scriptures say because I believe that they are an accurate picture of how I need to live my life and how I must relate to God at a very personal level.</p>
-                    <p>I believe that, in order to become a Christian, one must first be a disciple of Christ, repenting of sins and dedicating to live God's way (Acts: all conversions). Then, after becoming a disciple, this person must then be baptized in water and spirit (John 3:1-7, Acts 2:38, Romans 6:1-4), in the name of the Father, of the Son, and of the Holy Spirit. Finally, this new Christian must then go and make <em>disciples</em> of all other nations. (Matthew 28:18-20)</p>
+                    <p>I believe that, in order to become a Christian, one must first be a disciple of Christ, repenting of sins and dedicating to live God's way (Acts: all conversions). Then, after becoming a disciple, this person must then be baptized; born again of water and spirit (John 3:1-7, Acts 2:38, Romans 6:1-4), in the name of the Father, of the Son, and of the Holy Spirit. Finally, this new Christian must then go and make <em>disciples</em> of all other nations. (Matthew 28:18-20)</p>
                     <a href="../notes/bible-studies" target="_blank" class="about-section-btn">Check out the Bible Studies</a>
                 </div>
             </section>
@@ -97,7 +96,7 @@
             <section class="about-section">
                 <div class="about-section-container">
                     <!-- <h2 class="about-section-title">School</h2> -->
-                    <p>I have a lot of time on my hands now that I am at ELAC. Here's what I like to do:</p>
+                    <p><strong>I have a lot of time on my hands now that summer has begun.</strong> Here's what I like to do:</p>
                     <ul>
                           <li><strong>Berean Challenge</strong>: Read one chapter of the Bible every day. Current book: Hebrews. See <a href="https://www.biblegateway.com/passage/?search=Acts+17%3A11-12&version=NIV" target="_blank">this</a> passage.</li>
                           <li><strong>Website Prototyping</strong>: I like to test out website designs and gadgets and implement them into my own webpages. So this website may have some elements that do not function at times.</li>
@@ -108,23 +107,14 @@
                     <a href="http://central.caicc.net/" target="_blank" class="about-section-btn">Check out the Church</a>
                 </div>
             </section>
-            <section class="small-background-section" style="padding: 40px 0;">
+            <section class="small-background-section" id="footer">
                 <div class='pattern'></div>
                 <div class="small-background-container">
-                  <p class="small-background-title"><span style="font-size: 12px;">&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated June 11, 2015.</span></p>
+                  <p class="small-background-title"><span style="font-size: 12px;">&copy; 2015 Made with love by <a href="/" style="color:white;">Marvin Alc&aacute;ntara</a>. Last updated June 19, 2015.</span></p>
                     <!-- <a href="/works/video-theme" class="big-background-btn">Check it here</a> -->
                 </div>
             </section>
         </div>
     </body>
 
-    <!-- <body>
-
-      <footer class="footer">
-        <div class="container">
-          <p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated May 26, 2015.</p>
-        </div>
-      </footer>
-
-    </body> -->
 </html>
