Better readability on landing page
Increased size of asian script and added cta to 'Notes' button.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                           <li>- <strong>American Sign Language 1</strong>: Elementary American Sign Language</li>
                           <li>- <strong>French 1</strong>: Elementary French</li>
                     </ul>
-                    <a href="../notes" target="_blank" class="about-section-btn">Notes</a>
+                    <a href="../notes" target="_blank" class="about-section-btn">See the Notes</a>
                 </div>
             </section>
             <section class="small-background-section">
