--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta charset="utf-8">
         <title>Marvin Alcantara</title>
         <meta name="author" content="Marvin Alcantara">
-        <meta name="keywords" content="Marvin Alcantara, hireable college student, web designer, html coder, css coder, html css coder, flex coder, UC Berkeley, hireable, html, css, flex, photgrapher website, video website">
+        <meta name="keywords" content="Marvin Alcantara, web designer">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <meta name="robots" content="index, follow">
 
-        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
         <link rel="stylesheet" href="../css/normalize.css" media="all" type="text/css">
         <link rel="stylesheet" href="../css/a_style.css" media="all" type="text/css">
@@ -31,7 +31,7 @@
                     <li><a href="../contact">Contact</a></li>
                 </ul>
             </nav>
-            <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=aFK6YfnZlyE',containment:'body',autoPlay:true, opacity:1, quality:'hd1080'}"></a>
+            <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=RR2EI8EEOOw',containment:'body',autoPlay:true, opacity:1, quality:'hd1080'}"></a>
             <!-- <div class="pattern"></div> -->
             <div class="big-background-container">
                 <h1 class="big-background-title">Marvin Alcantara</h1>
@@ -51,27 +51,47 @@
             <section class="small-background-section">
                 <div class='pattern'></div>
                 <div class="small-background-container">
-                  <h2 class="small-background-title"><span>School</span></h2>
+                  <h2 class="small-background-title"><span>Experience</span></h2>
                     <!-- <p></p> <a href="/works/video-theme" class="big-background-btn">Check it here</a> -->
                 </div>
             </section>
 
             <section class="about-section">
                 <div class="about-section-container">
-                    <!-- <h2 class="about-section-title">School</h2> -->
-                    <p><strong>I am a student at UC Berkeley.</strong> I am majoring in Linguistics. I am currently taking time off to de-stress. So I'm attending East Los Angeles College while I am at home.</p>
-                    <p>Current coursework:</p>
+                    <!-- <h2 class="about-section-title">Experience</h2> -->
+                    <p>I am a strong <strong>Web Developer and Media Specialist</strong> with a proven ability to develop websites as well as manage social media, audio/visual graphics, and business effectively.</p>
+                    <p>Current position: <strong>Web Design and Marketing Intern</strong> at Proforma</p>
+                    <a href="https://my.indeed.com/p/marvina-vj27z49" target="_blank" class="about-section-btn">View Indeed Resume</a>
+                </div>
+            </section>
+            <section class="small-background-section">
+                <div class='pattern'></div>
+                <div class="small-background-container">
+                  <h2 class="small-background-title"><span>What drives me</span></h2>
+                    <p></p>
+                    <!-- <a href="/works/video-theme" class="big-background-btn">Check it here</a> -->
+                </div>
+            </section>
+            <section class="about-section">
+                <div class="about-section-container">
+                    <!-- <h2 class="about-section-title">What Drives Me</h2> -->
+                    <p><strong>I am a Christian / Disciple of Jesus.</strong> As such, I believe in excellence, committment, and hard work.</p>
+                    <p>Excellence is determined by one's level of committment to the project or cause. I've worked on multiple projects and have improved over time. This site, for example, is a personal test to build a website without a boiler plate like WordPress, Squarespace, or WiX.</p>
+                    <p>Commitment is determined by one's strength of character. Strength of character is something that can be developed and trained. It comes as a result of a decision. It takes one small decision every day to develop strength of character, perseverance, and even hope. When there's commitment, there's strength, perseverance, and hope.</p>
+                    <p>Below is a list of books that have radically changed my life (aside from the Bible, of course):</p>
                     <ul>
-                          <li>- <strong>American Sign Language 1</strong>: Elementary American Sign Language</li>
-                          <li>- <strong>French 1</strong>: Elementary French</li>
+                        <li><a href="https://smile.amazon.com/First-Principles-Follow-Studies-Small/dp/B08HGPPKFW/" target="_blank">First Principles and Follow Up Studies by Dr. Kip McKean</a></li>
+                        <li><a href="https://smile.amazon.com/Chronicles-Modern-Day-Christianity-Evangelizing-Generation/dp/179204240X/" target="_blank">The Chronicles of Modern-Day Christianity: Evangelizing the Nations in THIS Generation! by Ron Harding</a></li>
+                        <li><a href="https://smile.amazon.com/ELEVATE-Jesuss-Global-Revolution-Women/dp/958595740X/" target="_blank">ELEVATE: Jesus's Global Revolution For Women by Dr. Elena Garcia McKean</a></li>
+                        <li><a href="https://smile.amazon.com/Tale-three-Kings-Study-Brokenness/dp/0842369082/" target="_blank">A Tale of three Kings: A Study in Brokenness by Gene Edwards</a></li>
+                        <li><a href="https://smile.amazon.com/Prideful-Souls-Guide-Humility/dp/1577821866/" target="_blank">The Prideful Soul's Guide to Humility by Thomas A. Jones</a></li>
                     </ul>
-                    <a href="../notes" target="_blank" class="about-section-btn">See the Notes</a>
                 </div>
             </section>
             <section class="small-background-section">
                 <div class='pattern'></div>
                 <div class="small-background-container">
-                  <h2 class="small-background-title"><span>Convictions</span></h2>
+                  <h2 class="small-background-title"><span>Hobbies and Aspirations</span></h2>
                     <p></p>
                     <!-- <a href="/works/video-theme" class="big-background-btn">Check it here</a> -->
                 </div>
@@ -79,38 +99,20 @@
             <section class="about-section">
                 <div class="about-section-container">
                     <!-- <h2 class="about-section-title">School</h2> -->
-                    <p><strong>I am a Christian / Disciple.</strong> But I do not follow blindly what scriptures say. I scrutinize them and pay close attention to detail.</p>
-                    <p>I decided to become a Christian after careful consideration of evidences for Christianity and decided that since there is no evidence that refutes Christianity or the existence of God, I only have to believe one or the other. I chose to believe what the biblical scriptures say because I believe that they are an accurate picture of how I need to live my life and how I must relate to God at a very personal level.</p>
-                    <p>I believe that, in order to become a Christian, one must first be a disciple of Christ, repenting of sins and dedicating to live God's way (Acts: all conversions). Then, after becoming a disciple, this person must then be baptized; born again of water and spirit (John 3:1-7, Acts 2:38, Romans 6:1-4), in the name of the Father, of the Son, and of the Holy Spirit. Finally, this new Christian must then go and make <em>disciples</em> of all other nations. (Matthew 28:18-20)</p>
-                    <a href="../notes/bible-studies" target="_blank" class="about-section-btn">Check out the Bible Studies</a>
-                </div>
-            </section>
-            <section class="small-background-section">
-                <div class='pattern'></div>
-                <div class="small-background-container">
-                  <h2 class="small-background-title"><span>Hobbies</span></h2>
-                    <p></p>
-                    <!-- <a href="/works/video-theme" class="big-background-btn">Check it here</a> -->
-                </div>
-            </section>
-            <section class="about-section">
-                <div class="about-section-container">
-                    <!-- <h2 class="about-section-title">School</h2> -->
-                    <p><strong>I have a lot of time on my hands now that summer has begun.</strong> Here's what I like to do:</p>
+                    <p>Hobbies:</p>
                     <ul>
-                          <li><strong>Berean Challenge</strong>: Read one chapter of the Bible every day. Current book: Hebrews. See <a href="https://www.biblegateway.com/passage/?search=Acts+17%3A11-12&version=NIV" target="_blank">this</a> passage.</li>
                           <li><strong>Website Prototyping</strong>: I like to test out website designs and gadgets and implement them into my own webpages. So this website may have some elements that do not function at times.</li>
                           <li><strong>Fellowship</strong>: I love to hang out with friends from my church but I'm not exclusive and I love making new friends.</li>
                           <li><strong>Learn Chinese</strong>: <span class="asian">我喜欢学中文。</span>I'm not fluent yet but I'd like to be.</li>
                           <li><strong>Learn Japanese</strong>: <span class="asian">僕は日本語を勉強するが好きです。</span>I hope to be part of the mission team that is to be sent out to Tokyo, Japan in a couple of years.</li>
                     </ul>
-                    <a href="http://central.caicc.net/" target="_blank" class="about-section-btn">Check out the Church</a>
+                    <a href="https://tampabayicc.org/" target="_blank" class="about-section-btn">Check out the Church</a>
                 </div>
             </section>
             <section class="small-background-section" id="footer">
                 <div class='pattern'></div>
                 <div class="small-background-container">
-                  <p class="small-background-title"><span style="font-size: 12px;">&copy; 2015 Made with love by <a href="/" style="color:white;">Marvin Alc&aacute;ntara</a>. Last updated June 19, 2015.</span></p>
+                  <p class="small-background-title"><span style="font-size: 12px;">&copy; 2015-2020 Made with love by <a href="/" style="color:white;">Marvin Alcantara</a>. Last updated September 16, 2020.</span></p>
                     <!-- <a href="/works/video-theme" class="big-background-btn">Check it here</a> -->
                 </div>
             </section>
